--- a/src/index.css
+++ b/src/index.css
@@ -59,12 +59,11 @@ button:focus-visible {
 
 main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   padding: 0;
   margin-bottom: 1rem;
-  width: 600px;
 }
 
 input {
@@ -80,7 +79,6 @@ p {
 
 h1 {
   font-size: 3em;
-  margin: 0;
 }
 
 @media (prefers-color-scheme: light) {
