--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -31,50 +25,20 @@ body {
   min-height: 100vh;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button[disabled]:hover {
-  border-color: transparent;
-  cursor: not-allowed;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-around;
   padding: 0;
-  margin-bottom: 1rem;
-}
-
-input {
-  display: block;
-  margin: 0 auto 1rem;
+  width: 300px;
 }
 
 h1,
 h2,
 p {
   font-weight: normal;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
@@ -100,4 +64,29 @@ h1 {
 
 .small {
   font-size: 0.8em;
+}
+
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.forecast-day {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  width: 60px;
+}
+
+.forecast-day > i {
+  padding-bottom: 0.25em;
+}
+
+.larger {
+  font-size: 2em;
 }
