--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,7 +30,7 @@ main {
   flex-direction: column;
   justify-content: space-around;
   padding: 0;
-  width: 300px;
+  width: 500px;
 }
 
 h1,
@@ -76,13 +76,28 @@ hr {
   font-size: 0.8em;
 }
 
+.dim {
+  opacity: 0.75;
+}
+
+.icon-and-text {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between;
+  width: 100%; */
+}
+
+.icon-and-text > i {
+  padding-right: 0.25rem;
+}
+
 .forecast-day {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0;
   margin: 0;
-  width: 60px;
+  width: 20%;
 }
 
 .forecast-day > i {
